# frostbee

./: LICENSE  README.md  TODO_battery.txt  TODO_zigbee.txt  frostbee.code-workspace
3d-model/: stevenson-screen.scad
app/: CMakeLists.txt  Kconfig  README.rst  pm_static.yml  pm_static_release.yml  prj.conf  prj_release.conf  sample.yaml
app/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
app/include/: zb_range_extender.h
app/src/: 01_gpio_wiggle.c  02_i2c_scan.c  03_i2c_raw_100k.c  04_i2c_raw_400k.c  05_soft_reset.c  06_zephyr_driver.c  07_nrfx_twim.c  08_alt_pins.c  09_verbose.c  main.c  zb_frostbee.h  zb_mem_config_custom.h
zha/: README.md  frostbee.py
zigbee2mqtt/: README.md  frostbee.js
